tests/snapshots/test_parser__invalid_cases@invalid_assignments.nz.snap
---
source: tests/test_parser.rs
input_file: tests/resources/parser_cases/invalid_assignments.nz
---
Expected =, found ; at line 0, column 7:
let foo;
       ^
