tests/snapshots/test_parser__valid_cases@valid_boolean_expressions.nz.snap
---
source: tests/test_parser.rs
input_file: tests/resources/parser_cases/valid_boolean_expressions.nz
---
Program {
    nodes: [
        Statement(
            Expression(
                ExpressionStatement {
                    span: Span {
                        start: Position {
                            offset: 0,
                            line: 0,
                            column: 0,
                        },
                        end: Position {
                            offset: 4,
                            line: 0,
                            column: 4,
                        },
                        file: FileId(
                            0,
                        ),
                    },
                    expression: Bool(
                        true,
                        Span {
                            start: Position {
                                offset: 0,
                                line: 0,
                                column: 0,
                            },
                            end: Position {
                                offset: 4,
                                line: 0,
                                column: 4,
                            },
                            file: FileId(
                                0,
                            ),
                        },
                    ),
                },
            ),
        ),
        Statement(
            Expression(
                ExpressionStatement {
                    span: Span {
                        start: Position {
                            offset: 6,
                            line: 1,
                            column: 0,
                        },
                        end: Position {
                            offset: 11,
                            line: 1,
                            column: 5,
                        },
                        file: FileId(
                            0,
                        ),
                    },
                    expression: Bool(
                        false,
                        Span {
                            start: Position {
                                offset: 6,
                                line: 1,
                                column: 0,
                            },
                            end: Position {
                                offset: 11,
                                line: 1,
                                column: 5,
                            },
                            file: FileId(
                                0,
                            ),
                        },
                    ),
                },
            ),
        ),
    ],
}
